--- a/index.html
+++ b/index.html
@@ -1,11 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Health & Wellness</title>
-</head>
 <body>
-  <h1>Discover Natural Health Solutions</h1>
-  <p>Trusted wellness information to improve your life.</p>
+  <h1>Natural Solutions to Stop Snoring</h1>
+
+  <p>
+    Snoring is more than just an annoying sound — it can affect sleep quality,
+    relationships, and overall health. Millions of people struggle every night
+    without realizing that natural methods may help reduce or even eliminate snoring.
+  </p>
+
+  <h2>Why Do People Snore?</h2>
+
+  <p>
+    Snoring often happens when airflow is partially blocked during sleep.
+    This can be caused by weak throat muscles, poor sleeping posture,
+    nasal congestion, or lifestyle factors.
+  </p>
+
+  <h2>Can Snoring Be Reduced Naturally?</h2>
+
+  <p>
+    Many people are now exploring natural approaches such as targeted exercises,
+    breathing techniques, and lifestyle adjustments that support healthier sleep.
+  </p>
+
+  <ul>
+    <li>Simple mouth and throat exercises</li>
+    <li>Better nighttime breathing habits</li>
+    <li>Improved sleep posture</li>
+    <li>Natural routines that support airway health</li>
+  </ul>
+
+  <h2>Learn More About a Natural Approach</h2>
+
+  <p>
+    Some experts have shared step-by-step guidance focused on strengthening
+    the muscles involved in breathing during sleep.
+  </p>
+
+  <p>
+    👉 <strong>Click below to learn more about this natural approach:</strong>
+  </p>
+
+  <p>
+    <a href="#" style="font-size:18px; font-weight:bold;">
+      Discover the Natural Method
+    </a>
+  </p>
+
+  <hr>
+
+  <p style="font-size:12px; color:gray;">
+    Disclaimer: This website is for informational purposes only and does not provide medical advice.
+    Always consult a qualified healthcare professional regarding health concerns.
+  </p>
 </body>
-</html>
