Fix HopLink anchor

--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
   </p>
 
   <p>
-    <a href="#" style="font-size:18px; font-weight:bold;">
-      Discover the Natural Method
-    </a>
+    <a href="https://3b4135u0qkp2bw7ouc3fap1w3l.hop.clickbank.net/?&traffic_source=bing&campaign=snoring_bridge"
+   style="font-size:18px; font-weight:bold;"
+   target="_blank"
+   rel="nofollow noopener">
+  Discover the Natural Method
+</a>
+
   </p>
 
   <hr>
