Clean Google Ads ready landing page

--- a/index.html
+++ b/index.html
@@ -1,59 +1,70 @@
-<body>
-  <h1>Natural Solutions to Stop Snoring</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Understanding Snoring and Better Sleep Habits</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Learn about common causes of snoring and explore natural approaches to support better sleep habits.">
+</head>
+
+<body style="font-family: Arial, sans-serif; line-height: 1.6; max-width: 800px; margin: auto; padding: 20px;">
+
+  <h1>Understanding Snoring and Better Sleep Habits</h1>
 
   <p>
-    Snoring is more than just an annoying sound — it can affect sleep quality,
-    relationships, and overall health. Millions of people struggle every night
-    without realizing that natural methods may help reduce or even eliminate snoring.
+  Snoring is a common sleep-related issue that affects millions of adults worldwide.
+  While it may seem harmless, persistent snoring can disrupt sleep quality and daily routines.
   </p>
 
-  <h2>Why Do People Snore?</h2>
+  <h2>Why Snoring Happens More Often Than You Think</h2>
 
   <p>
-    Snoring often happens when airflow is partially blocked during sleep.
-    This can be caused by weak throat muscles, poor sleeping posture,
-    nasal congestion, or lifestyle factors.
-  </p>
-
-  <h2>Can Snoring Be Reduced Naturally?</h2>
-
-  <p>
-    Many people are now exploring natural approaches such as targeted exercises,
-    breathing techniques, and lifestyle adjustments that support healthier sleep.
-  </p>
-
-  <ul>
-    <li>Simple mouth and throat exercises</li>
-    <li>Better nighttime breathing habits</li>
-    <li>Improved sleep posture</li>
-    <li>Natural routines that support airway health</li>
-  </ul>
-
-  <h2>Learn More About a Natural Approach</h2>
-
-  <p>
-    Some experts have shared step-by-step guidance focused on strengthening
-    the muscles involved in breathing during sleep.
+  In many cases, snoring occurs when airflow through the nose or mouth is partially restricted during sleep.
+  This can be influenced by non-medical factors such as sleep position, breathing habits,
+  muscle relaxation, or lifestyle routines.
   </p>
 
   <p>
-    👉 <strong>Click below to learn more about this natural approach:</strong>
+  Many people are surprised to learn that small, consistent changes in daily habits may support better sleep quality.
+  Factors such as posture, breathing awareness, and nighttime routines often play a role.
   </p>
 
+  <p>
+  Instead of focusing only on temporary fixes, some people explore natural, non-invasive approaches
+  that focus on improving sleep habits over time.
+  </p>
+
+  <h2>Learning More About Natural Sleep Approaches</h2>
+
+  <p>
+  If you are interested in learning about a structured, non-invasive method that focuses on improving
+  sleep habits naturally, you may find the following resource helpful.
+  </p>
+
+  <!-- BOTÓN / LINK -->
   <p>
     <a href="https://3b4135u0qkp2bw7ouc3fap1w3l.hop.clickbank.net/?&traffic_source=bing&campaign=snoring_bridge"
-   style="font-size:18px; font-weight:bold;"
-   target="_blank"
-   rel="nofollow noopener">
-  Discover the Natural Method
-</a>
-
+       target="_blank"
+       rel="nofollow noopener"
+       style="font-size:18px; font-weight:bold;">
+      Discover the Natural Method
+    </a>
   </p>
+
+  <!-- AVISO AFILIADO -->
+  <p><small>
+  This page may contain affiliate links. If you choose to make a purchase, I may earn a commission
+  at no additional cost to you.
+  </small></p>
 
   <hr>
 
-  <p style="font-size:12px; color:gray;">
-    Disclaimer: This website is for informational purposes only and does not provide medical advice.
-    Always consult a qualified healthcare professional regarding health concerns.
+  <!-- LINKS LEGALES -->
+  <p>
+    <a href="privacy.html">Privacy Policy</a> |
+    <a href="terms.html">Terms of Use</a> |
+    <a href="about.html">About</a>
   </p>
+
 </body>
+</html>
