Google Ads ready landing page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <!-- BOTÓN / LINK -->
   <p>
-    <a href="https://3b4135u0qkp2bw7ouc3fap1w3l.hop.clickbank.net/?&traffic_source=bing&campaign=snoring_bridge"
+    <a href="https://3b4135u0qkp2bw7ouc3fap1w3l.hop.clickbank.net/?tid=google_snoring"
        target="_blank"
        rel="nofollow noopener"
        style="font-size:18px; font-weight:bold;">
