Update page content

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Understanding Snoring and Better Sleep Habits</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Learn about common causes of snoring and explore natural approaches to support better sleep habits.">
+  <meta name="description" content="Learn about common causes of snoring and explore natural, non-invasive approaches that may support better sleep habits.">
+
 </head>
 
 <body style="font-family: Arial, sans-serif; line-height: 1.6; max-width: 800px; margin: auto; padding: 20px;">
@@ -12,36 +14,36 @@
   <h1>Understanding Snoring and Better Sleep Habits</h1>
 
   <p>
-  Snoring is a common sleep-related issue that affects millions of adults worldwide.
-  While it may seem harmless, persistent snoring can disrupt sleep quality and daily routines.
+    Snoring is a common sleep-related issue that affects millions of adults worldwide.
+    While it may seem harmless, persistent snoring can disrupt sleep quality and daily routines.
   </p>
 
   <h2>Why Snoring Happens More Often Than You Think</h2>
 
   <p>
-  In many cases, snoring occurs when airflow through the nose or mouth is partially restricted during sleep.
-  This can be influenced by non-medical factors such as sleep position, breathing habits,
-  muscle relaxation, or lifestyle routines.
+    In many cases, snoring occurs when airflow through the nose or mouth is partially restricted during sleep.
+    This may be influenced by factors such as sleep position, breathing patterns, muscle relaxation,
+    and daily habits.
   </p>
 
   <p>
-  Many people are surprised to learn that small, consistent changes in daily habits may support better sleep quality.
-  Factors such as posture, breathing awareness, and nighttime routines often play a role.
+    Many people are surprised to learn that small, consistent changes in nighttime routines
+    may help support better sleep quality over time.
   </p>
 
   <p>
-  Instead of focusing only on temporary fixes, some people explore natural, non-invasive approaches
-  that focus on improving sleep habits over time.
+    Instead of focusing only on temporary solutions, some individuals explore non-invasive,
+    habit-based approaches designed to encourage healthier sleep patterns.
   </p>
 
   <h2>Learning More About Natural Sleep Approaches</h2>
 
   <p>
-  If you are interested in learning about a structured, non-invasive method that focuses on improving
-  sleep habits naturally, you may find the following resource helpful.
+    If you are interested in learning more about a structured, non-invasive method
+    that focuses on supporting better sleep habits, the following resource may be helpful.
   </p>
 
-  <!-- BOTÓN / LINK -->
+  <!-- BOTÓN / LINK AFILIADO -->
   <p>
     <a href="https://3b4135u0qkp2bw7ouc3fap1w3l.hop.clickbank.net/?tid=google_snoring"
        target="_blank"
@@ -51,19 +53,27 @@
     </a>
   </p>
 
-  <!-- AVISO AFILIADO -->
-  <p><small>
-  This page may contain affiliate links. If you choose to make a purchase, I may earn a commission
-  at no additional cost to you.
-  </small></p>
+  <!-- AVISO DE AFILIADO -->
+  <p style="font-size:13px;">
+    <small>
+      This page may contain affiliate links. If you choose to make a purchase,
+      I may earn a commission at no additional cost to you.
+    </small>
+  </p>
 
   <hr>
 
   <!-- LINKS LEGALES -->
-  <p>
+  <p style="font-size:13px; text-align:center;">
     <a href="privacy.html">Privacy Policy</a> |
     <a href="terms.html">Terms of Use</a> |
     <a href="about.html">About</a>
+  </p>
+
+  <!-- CONTACTO -->
+  <p style="font-size:13px; text-align:center; color:#666;">
+    Contact: 
+    <a href="mailto:aalfarotcr44@gmail.com">aalfarotcr44@gmail.com</a>
   </p>
 
 </body>
