Update page content

--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Understanding Snoring and Better Sleep Habits</title>
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Learn about common causes of snoring and explore natural, non-invasive approaches that may support better sleep habits.">
-
 </head>
 
 <body style="font-family: Arial, sans-serif; line-height: 1.6; max-width: 800px; margin: auto; padding: 20px;">
@@ -43,7 +41,7 @@
     that focuses on supporting better sleep habits, the following resource may be helpful.
   </p>
 
-  <!-- BOTÓN / LINK AFILIADO -->
+  <!-- CTA / AFFILIATE LINK -->
   <p>
     <a href="https://3b4135u0qkp2bw7ouc3fap1w3l.hop.clickbank.net/?tid=google_snoring"
        target="_blank"
@@ -53,7 +51,7 @@
     </a>
   </p>
 
-  <!-- AVISO DE AFILIADO -->
+  <!-- AFFILIATE DISCLOSURE -->
   <p style="font-size:13px;">
     <small>
       This page may contain affiliate links. If you choose to make a purchase,
@@ -63,16 +61,16 @@
 
   <hr>
 
-  <!-- LINKS LEGALES -->
+  <!-- LEGAL LINKS -->
   <p style="font-size:13px; text-align:center;">
     <a href="privacy.html">Privacy Policy</a> |
     <a href="terms.html">Terms of Use</a> |
     <a href="about.html">About</a>
   </p>
 
-  <!-- CONTACTO -->
+  <!-- CONTACT -->
   <p style="font-size:13px; text-align:center; color:#666;">
-    Contact: 
+    Contact:
     <a href="mailto:aalfarotcr44@gmail.com">aalfarotcr44@gmail.com</a>
   </p>
 
