Update snoring landing page

--- a/index.html
+++ b/index.html
@@ -2,77 +2,191 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Understanding Snoring and Better Sleep Habits</title>
+  <title>Stop Snoring Exercises Review | Natural Method</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Learn about common causes of snoring and explore natural, non-invasive approaches that may support better sleep habits.">
+  <meta name="description" content="An honest review of a natural, exercise-based method designed to help reduce snoring. Learn how it works, who it may help, and what to expect.">
+
+  <!-- Google Ads Global Tag -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17864334613"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'AW-17864334613');
+  </script>
+
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #0f172a;
+      color: #e5e7eb;
+      margin: 0;
+      line-height: 1.6;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+    }
+    h1, h2, h3 {
+      color: #f9fafb;
+    }
+    a {
+      color: #38bdf8;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .box {
+      background-color: #020617;
+      border: 1px solid #1e293b;
+      border-radius: 8px;
+      padding: 20px;
+      margin-bottom: 20px;
+    }
+    .cta {
+      display: block;
+      text-align: center;
+      background-color: #38bdf8;
+      color: #020617;
+      padding: 15px;
+      font-weight: bold;
+      border-radius: 6px;
+      margin: 20px 0;
+    }
+    .cta:hover {
+      background-color: #0ea5e9;
+    }
+    .small {
+      font-size: 0.85em;
+      color: #9ca3af;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    footer {
+      font-size: 0.8em;
+      color: #9ca3af;
+      border-top: 1px solid #1e293b;
+      padding-top: 15px;
+    }
+  </style>
 </head>
 
-<body style="font-family: Arial, sans-serif; line-height: 1.6; max-width: 800px; margin: auto; padding: 20px;">
+<body>
+  <div class="container">
 
-  <h1>Understanding Snoring and Better Sleep Habits</h1>
+    <h1>Stop Snoring Exercises Review: A Natural Method</h1>
 
-  <p>
-    Snoring is a common sleep-related issue that affects millions of adults worldwide.
-    While it may seem harmless, persistent snoring can disrupt sleep quality and daily routines.
-  </p>
+    <div class="box">
+      <p>
+        Snoring can disrupt sleep quality for both you and your partner. This page provides an informational review
+        of a <strong>natural, exercise-based method</strong> designed to help reduce snoring by improving breathing habits
+        and strengthening the muscles involved in airflow during sleep.
+      </p>
+      <p class="small">
+        This is not a medical website. The content here is educational and intended to help you understand one possible approach.
+      </p>
+    </div>
 
-  <h2>Why Snoring Happens More Often Than You Think</h2>
+    <div class="box">
+      <h2>What This Method Is (and Is Not)</h2>
 
-  <p>
-    In many cases, snoring occurs when airflow through the nose or mouth is partially restricted during sleep.
-    This may be influenced by factors such as sleep position, breathing patterns, muscle relaxation,
-    and daily habits.
-  </p>
+      <h3>✔ What it is</h3>
+      <ul>
+        <li>An exercise-based program focused on breathing and throat muscle control</li>
+        <li>A routine you practice at home, without devices</li>
+        <li>A gradual approach that may help reduce snoring over time</li>
+      </ul>
 
-  <p>
-    Many people are surprised to learn that small, consistent changes in nighttime routines
-    may help support better sleep quality over time.
-  </p>
+      <h3>✖ What it is not</h3>
+      <ul>
+        <li>Not a physical device or mouthpiece</li>
+        <li>Not a guaranteed or instant solution</li>
+        <li>Not a substitute for medical treatment</li>
+      </ul>
+    </div>
 
-  <p>
-    Instead of focusing only on temporary solutions, some individuals explore non-invasive,
-    habit-based approaches designed to encourage healthier sleep patterns.
-  </p>
+    <div class="box">
+      <h2>Why Some People Choose Exercises for Snoring</h2>
+      <ul>
+        <li>They are non-invasive and can be done at home</li>
+        <li>They aim to strengthen muscles involved in breathing</li>
+        <li>They can complement healthy sleep habits</li>
+        <li>No equipment or devices required</li>
+      </ul>
+    </div>
 
-  <h2>Learning More About Natural Sleep Approaches</h2>
+    <div class="box">
+      <h2>Who This May Help</h2>
+      <ul>
+        <li>People with mild to moderate snoring</li>
+        <li>Those looking for a natural, non-device approach</li>
+        <li>Individuals willing to practice consistently</li>
+      </ul>
 
-  <p>
-    If you are interested in learning more about a structured, non-invasive method
-    that focuses on supporting better sleep habits, the following resource may be helpful.
-  </p>
+      <h2>Who Should Be Cautious</h2>
+      <ul>
+        <li>People with severe snoring or suspected sleep apnea</li>
+        <li>Those experiencing choking or breathing pauses during sleep</li>
+        <li>Anyone advised by a professional to seek medical treatment</li>
+      </ul>
+    </div>
 
-  <!-- CTA / AFFILIATE LINK -->
-  <p>
-    <a href="https://3b4135u0qkp2bw7ouc3fap1w3l.hop.clickbank.net/?tid=google_snoring"
-       target="_blank"
-       rel="nofollow noopener"
-       style="font-size:18px; font-weight:bold;">
-      Discover the Natural Method
-    </a>
-  </p>
+    <div class="box">
+      <h2>See the Official Program Details</h2>
+      <p>
+        If you want to explore the full program, including how the exercises are presented, pricing, and availability,
+        you should review the official page.
+      </p>
 
-  <!-- AFFILIATE DISCLOSURE -->
-  <p style="font-size:13px;">
-    <small>
-      This page may contain affiliate links. If you choose to make a purchase,
-      I may earn a commission at no additional cost to you.
-    </small>
-  </p>
+      <!-- 🔴 REPLACE THIS LINK WITH YOUR REAL CLICKBANK HOPLINK -->
+      <a class="cta" href="https://3b4135u0qkp2bw7ouc3fap1w3l.hop.clickbank.net/?tid=google_snoring" target="_blank" rel="nofollow sponsored noopener">
+        View the Official Exercise Program →
+      </a>
 
-  <hr>
+      <p class="small">
+        This link may take you to an external website where additional terms and policies apply.
+      </p>
+    </div>
 
-  <!-- LEGAL LINKS -->
-  <p style="font-size:13px; text-align:center;">
-    <a href="privacy.html">Privacy Policy</a> |
-    <a href="terms.html">Terms of Use</a> |
-    <a href="about.html">About</a>
-  </p>
+    <div class="box">
+      <h2>Affiliate Disclosure</h2>
+      <p class="small">
+        This website contains affiliate links. If you choose to purchase through a link on this page,
+        we may earn a commission at no additional cost to you.
+      </p>
 
-  <!-- CONTACT -->
-  <p style="font-size:13px; text-align:center; color:#666;">
-    Contact:
-    <a href="mailto:aalfarotcr44@gmail.com">aalfarotcr44@gmail.com</a>
-  </p>
+      <h2>Medical Disclaimer</h2>
+      <p class="small">
+        The information provided on this website is for educational purposes only and does not constitute medical advice.
+        Results may vary. Always consult a qualified professional regarding health concerns.
+      </p>
+    </div>
 
+    <div class="box">
+      <h2>Contact</h2>
+      <p>
+        If you have questions about this review page, you may contact:
+        <br>
+        <a href="mailto:aalfarotcr44@gmail.com">aalfarotcr44@gmail.com</a>
+      </p>
+      <p class="small">
+        For product support, billing, or refunds, please refer to the official product website.
+      </p>
+    </div>
+
+    <footer>
+      <p>
+        © <span id="year"></span> Snoring Review. All rights reserved.
+      </p>
+    </footer>
+
+  </div>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
