Update snoring landing page

--- a/index.html
+++ b/index.html
@@ -178,10 +178,22 @@
     </div>
 
     <footer>
-      <p>
-        © <span id="year"></span> Snoring Review. All rights reserved.
-      </p>
-    </footer>
+  <p>
+    © <span id="year"></span> Snoring Review. All rights reserved.
+  </p>
+
+  <p class="small">
+    This page may contain affiliate links. If you choose to make a purchase, I may earn a commission
+    at no additional cost to you.
+  </p>
+
+  <p class="small">
+    <a href="privacy.html">Privacy Policy</a> |
+    <a href="terms.html">Terms of Use</a> |
+    <a href="about.html">About</a>
+  </p>
+</footer>
+
 
   </div>
 
